--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -54,7 +54,7 @@ $bp-larger-than-narrow-desktop: 'min-width: 1260px';
 // grid-container at 1010 (75px col + 10px gutter)
 // for large screens, 100% for smaller screens
 $container-width: 100%;
-$container-width-larger-than-mobile: 100%;
+$container-width-larger-than-mobile: 98%;
 $container-width-larger-than-tablet: 100%;
 $container-width-larger-than-narrow-desktop: 1010px;
 
